--- a/TouchGestureSandbox/Base.lproj/Main.storyboard
+++ b/TouchGestureSandbox/Base.lproj/Main.storyboard
@@ -130,10 +130,12 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="canvas" destination="JdH-7G-GI5" id="F5T-tq-FXy"/>
+                        <outlet property="canvas" destination="JdH-7G-GI5" id="J93-2g-yhx"/>
                         <outlet property="colorPicker" destination="6do-HO-dBZ" id="cBf-fd-6N4"/>
                         <outlet property="deleteView" destination="GVJ-n3-Pwk" id="EbK-x1-gJX"/>
+                        <outlet property="gridView" destination="9oX-fY-piJ" id="7lg-kL-Kly"/>
                         <outlet property="recognizer" destination="TYH-bm-MQM" id="cT8-d6-wPt"/>
+                        <outlet property="scrollView" destination="g6Y-2Y-6Pf" id="IsU-IH-7n7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
