Fill screen with grid

--- a/TouchGestureSandbox/Base.lproj/Main.storyboard
+++ b/TouchGestureSandbox/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" maximumZoomScale="14" translatesAutoresizingMaskIntoConstraints="NO" id="g6Y-2Y-6Pf">
-                                        <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9oX-fY-piJ" customClass="GridView" customModule="TouchGestureSandbox" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -49,9 +49,9 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstItem="g6Y-2Y-6Pf" firstAttribute="top" secondItem="ShL-az-NvT" secondAttribute="top" id="02V-Ww-yTi"/>
-                                    <constraint firstItem="g6Y-2Y-6Pf" firstAttribute="bottom" secondItem="ShL-az-NvT" secondAttribute="bottom" id="d9L-kV-zSI"/>
+                                    <constraint firstItem="g6Y-2Y-6Pf" firstAttribute="top" secondItem="JdH-7G-GI5" secondAttribute="top" id="07y-dw-lxp"/>
                                     <constraint firstAttribute="trailing" secondItem="g6Y-2Y-6Pf" secondAttribute="trailing" id="gue-0Q-sqo"/>
+                                    <constraint firstAttribute="bottom" secondItem="g6Y-2Y-6Pf" secondAttribute="bottom" id="pcX-Ru-aqr"/>
                                     <constraint firstItem="g6Y-2Y-6Pf" firstAttribute="leading" secondItem="ShL-az-NvT" secondAttribute="leading" id="uOE-z3-mT1"/>
                                 </constraints>
                                 <viewLayoutGuide key="safeArea" id="ShL-az-NvT"/>
